<resources>
    <string name="app_name">mambo</string>
    <string name="title_home">Home</string>
    <string name="title_journey">Journey</string>
    <string name="title_activities">Activities</string>
    <string name="title_bot">Bot</string>
    <string name="title_more">More</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
