<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_journey"
        android:icon="@drawable/journey"
        android:title="@string/title_journey" />

    <item
        android:id="@+id/navigation_activities"
        android:icon="@drawable/activities"
        android:title="@string/title_activities" />

    <item
        android:id="@+id/navigation_bot"
        android:icon="@drawable/bot"
        android:title="@string/title_bot" />

    <item
    android:id="@+id/navigation_more"
    android:icon="@drawable/more"
    android:title="@string/title_more" />
</menu>
